--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -3,11 +3,12 @@
 div.nav{
     //position:absolute;
     //top: 0;
-    width: 100%;
     background: #000000;
     color:#ffffff;
-    padding-top: 6%;
+    padding-left: 25%;
     box-shadow: 0 0 25px 0 black;
+    padding-top: 1.5%;
+    padding-bottom: 1.5%;
 }
 .normal{
     float: none;
@@ -23,7 +24,8 @@ div.nav{
     -ms-transition:.7s;
     -moz-transition:.7s;
     -webkit-transition:.7s;
-    transition: .7s
+    transition: .7s;
+    padding-right: 6%;
 }
 a.normal:hover{
   color: blue;
