--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,15 +1,14 @@
-.line-1{
+.Typer{
     margin-top: 5%;
-    margin-left: 35%;
+
     border-right: 10px solid rgba(255,255,255,.75);
     font-size: 400%;
     text-align: center;
-    white-space: nowrap;
-    overflow: hidden;
+
 }
 
 /* Animation */
-.anim-typewriter{
+/*.anim-typewriter{
   animation: typewriter 2s steps(44) 1s 1 normal both,
              blinkTextCursor 1000ms steps(44) infinite normal;
 }
@@ -21,24 +20,23 @@
   from{border-right-color:#ffffff;}
   to{border-right-color: transparent;}
 }
-
+*/
 
 
 
 
 div.links{
-  margin-left:37%;
-
+  margin-left:38%;
+  padding-top: 2%;
 
 }
 
 a.links{
   padding-right: 6%;
   text-decoration: none;
+
   color: #000000;
 }
 a.links:hover{
-        -webkit-transform: scale(1.3);
-        -ms-transform: scale(1.3);
-        transform: scale(1.3);
+
 }
