--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,34 +1,20 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
 .Typer{
-    margin-top: 5%;
-
-    border-right: 10px solid rgba(255,255,255,.75);
-    font-size: 400%;
-    text-align: center;
-
+    padding-left: 37%;
+    font-size: 500%;
+    color: black;
+    font-family: 'Roboto', sans-serif;
 }
-
-/* Animation */
-/*.anim-typewriter{
-  animation: typewriter 2s steps(44) 1s 1 normal both,
-             blinkTextCursor 1000ms steps(44) infinite normal;
+.down{
+  margin-top: 7%;
 }
-@keyframes typewriter{
-  from{width:0;}
-  to{width: 27%;}
-}
-@keyframes blinkTextCursor{
-  from{border-right-color:#ffffff;}
-  to{border-right-color: transparent;}
-}
-*/
-
-
-
 
 div.links{
-  margin-left:38%;
-  padding-top: 2%;
-
+  padding-left: 40%;
 }
 
 a.links{
@@ -37,6 +23,91 @@ a.links{
 
   color: #000000;
 }
-a.links:hover{
 
+.boxshadow{
+  padding-top: 2%;
+  padding-bottom: 2%;
+  background-color: #d2d4d8;
+  box-shadow: 3px 0px 0px  black, 0 0 3px black;
+}
+.slider {
+  margin-left: 15%;
+  border: 2px black solid;
+  border-radius: 40px;
+  position: relative;
+  width: 700px;
+  height: 500px;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.slider-wrapper {
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
+
+.slide {
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+}
+
+.arrow {
+  height: 50px;
+  width: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #ffffff;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: transform ease-in .1s;
+}
+
+.nextArrow {
+  position: absolute;
+  top: 50%;
+  right: 25px;
+  z-index: 999;
+  color: #fff;
+}
+
+.backArrow {
+  position: absolute;
+  top: 50%;
+  left: 25px;
+  z-index: 999;
+  color: #fff;
+}
+
+i {
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+}
+.right {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+.left {
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+}
+.column {
+  float: left;
+  width: 50%;
+}
+
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.shifter{
+  margin-left: 15%;
+  margin-top: 15%;
+  text-align: center;
 }
