--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -1,21 +1,23 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 div.nav{
-    //position:absolute;
-    //top: 0;
+    width: 100%;
+    position: fixed;
+    z-index: 9999;
+    top: 0;
     background: #000000;
     color:#ffffff;
-    padding-left: 25%;
+    padding-left: 70%;
     box-shadow: 0 0 25px 0 black;
     padding-top: 1.5%;
     padding-bottom: 1.5%;
 }
-.normal{
+a.normal{
     text-decoration: none;
     float: none;
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
-    font-size: 325%;
+    font-size: 200%;
     display:inline-block;
     line-height: normal;
     color: #ffffff;
@@ -26,8 +28,12 @@ div.nav{
     -webkit-transition:.7s;
     transition: .7s;
     padding-right: 6%;
+
+
 }
 a.normal:hover{
   text-decoration: none;
-  color: blue;
+  color: yellow;
+
+
 }
