--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
 
 html, body {
@@ -14,10 +14,8 @@ html, body {
 .Typer{
     padding-left: 35%;
     font-size: 500%;
-    color: black;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
-    padding-top: 2%;
     padding-bottom: 1%;
 }
 
@@ -27,7 +25,7 @@ html, body {
 
 div.links{
   padding-left: 41%;
-  margin-bottom: 3%;
+  margin-bottom: 2%;
 }
 
 a.links{
@@ -37,14 +35,13 @@ a.links{
 }
 
 .boxshadow{
-  padding-top: 2%;
   padding-bottom: 2%;
-  background-color: #d2d4d8;
+  background-color: #22252C;
   box-shadow: 3px 0px 0px  black, 0 0 3px black;
 }
 .slider {
   margin-left: 11%;
-  border: 2px black solid;
+  border: 2px white solid;
   border-radius: 40px;
   position: relative;
   width: 800px;
@@ -93,17 +90,19 @@ a.links{
   color: #fff;
 }
 
-i {
+.right {
   border: solid black;
   border-width: 0 3px 3px 0;
   display: inline-block;
   padding: 3px;
-}
-.right {
   transform: rotate(-45deg);
   -webkit-transform: rotate(-45deg);
 }
 .left {
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
   transform: rotate(135deg);
   -webkit-transform: rotate(135deg);
 }
@@ -111,30 +110,55 @@ i {
   float: left;
   width: 50%;
 }
+.column6 {
+  float: left;
+  width: 50%;
+  padding-top: 2%;
+}
+.column1 {
+  float: left;
+  width: 60%;
+}
+.column2 {
+  float: left;
+  width: 40%;
+}
+.column3{
+  float: left;
+  width: 35%;
 
+}
+.column4{
+  float: left;
+  width: 65%;
+}
+.column5{
+  margin-top: 2%;
+  margin-left: 16.5%;
+
+  float: left;
+  width: 15%;
+}
 .row::after {
   content: "";
   clear: both;
   display: table;
 }
-
+.icons{
+    font-weight: bold;
+    font-size: 120%;
+    color: white;
+}
 .shifter{
-  margin-left: 15%;
-  margin-top: 5%;
+  margin-left: 10%;
+
 }
 .montserrat{
-  font-family: 'Montserrat', sans-serif;
-  font-size: 300%;
+  color: white;
+  font-size: 800%;
   font-weight: bold;
 }
-.montserrat1{
-  margin-top: 5%;
 
-  font-family: 'Montserrat', sans-serif;
-  font-size: 500%;
-  font-weight: bold;
-  text-align: center;
-}
 .fontawesome{
 color:#bfbfbf;
 -o-transition:.7s;
@@ -146,13 +170,14 @@ transition: .7s;
 
 .fontawesome:hover{
   transform: scale(1.5);
-  color:#83aff7;
+  color:#E14658;
 }
 .bottomlinks{
   margin-right: 1%;
   padding-left: 1%;
 }
 footer{
+  margin-top: 5%;
   padding-top: 2%;
   background: #000000;
   color: white;
@@ -187,16 +212,12 @@ border: 1px black solid;
 background-color: #bfbfbf;
 }
 .centre{
-  text-align: center;
-  padding: 2%;
+color: white;
+padding-top: 2%;
+padding-left:10%;
+padding-right: 5%;
 }
-.imgslide{
 
-}
-.margin{
-  margin-left: 40%;
-  margin-right: 40%;
-}
 .slick-prev {
   left: 5% !important;
   z-index: 1;
@@ -205,4 +226,114 @@ background-color: #bfbfbf;
   color: black;
   right: 5% !important;
   z-index: 1;
+}
+.bigText{
+  color: white;
+  background-color: grey;
+  padding-left: 1%;
+  padding-bottom: .5%;
+  position: relative;
+  top: 53px;
+  margin-top: 6%;
+  font-size: 800%;
+  font-weight: bold;
+  margin-left: 3%;
+  width: 22%;
+  border-bottom: 10px white solid;
+  transition: 1s;
+
+}
+.bigText:hover{
+  background-color: #E14658;
+
+}
+.montserrat1{
+  color: white;
+  background-color: grey;
+  padding-left: 1%;
+  padding-bottom: .5%;
+  position: relative;
+  top: 53px;
+  margin-top: 6%;
+  font-size: 800%;
+  font-weight: bold;
+  margin-left: 3%;
+  width: 25%;
+  border-bottom: 10px white solid;
+  transition: 1s;
+}
+.montserrat1:hover{
+background-color: #E14658;
+}
+.blackboard{
+  padding:8.3%;
+  color: white;
+  background-color:#22252C;
+}
+.blackboard1{
+  padding-top: 5%;
+  padding-bottom: 2%;
+  background-color: #22252C;
+}
+.grain{
+    padding: 5%;
+    background-color: grey;
+}
+.grain1{
+    background-color:grey;
+}
+.white{
+  background-color: grey;
+  color: white;
+}
+.paragraph{
+font-family: 'Roboto', sans-serif;
+color: white;
+font-size: 130%;
+}
+.paragraph1{
+margin-left: 5%;
+margin-right: 5%;
+margin-bottom: 2%;
+font-family: 'Roboto', sans-serif;
+color: white;
+font-size: 130%;
+}
+.btn-custom {
+  background-color: #E14658;
+  border-color: #E14658;
+}
+.btn-custom:hover,
+.btn-custom:focus,
+.btn-custom:active,
+.btn-custom.active {
+  background-color: #dd3044;
+  border-color: #d22236;
+}
+.btn-custom.disabled:hover,
+.btn-custom.disabled:focus,
+.btn-custom.disabled:active,
+.btn-custom.disabled.active,
+.btn-custom[disabled]:hover,
+.btn-custom[disabled]:focus,
+.btn-custom[disabled]:active,
+.btn-custom[disabled].active,
+fieldset[disabled] .btn-custom:hover,
+fieldset[disabled] .btn-custom:focus,
+fieldset[disabled] .btn-custom:active,
+fieldset[disabled] .btn-custom.active {
+  background-color: #E14658;
+  border-color: #E14658;
+}
+
+.nicole{
+  position: relative;
+  left:-36%;
+  top:37px;
+  color: white;
+  transition: .7s;
+}
+.nicole:hover{
+transform: scale(1.3);
+color: #E14658;
 }
