--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -5,6 +5,7 @@
 html, body {
     max-width: 100%;
     overflow-x: hidden;
+    min-width: 1500px;
 }
 .background{
   background-image: url("https://images.unsplash.com/photo-1500993855538-c6a99f437aa7?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80");
@@ -12,7 +13,7 @@ html, body {
   background-size: cover;
 }
 .Typer{
-    padding-left: 35%;
+    padding-left: 30%;
     font-size: 500%;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
@@ -238,7 +239,7 @@ padding-right: 5%;
   font-size: 800%;
   font-weight: bold;
   margin-left: 3%;
-  width: 22%;
+  width: 27%;
   border-bottom: 10px white solid;
   transition: 1s;
 
@@ -258,7 +259,7 @@ padding-right: 5%;
   font-size: 800%;
   font-weight: bold;
   margin-left: 3%;
-  width: 25%;
+  width: 31%;
   border-bottom: 10px white solid;
   transition: 1s;
 }
