--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -7,13 +7,14 @@ html, body {
     overflow-x: hidden;
     min-width: 1500px;
 }
+
 .background{
   background-image: url("https://images.unsplash.com/photo-1500993855538-c6a99f437aa7?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80");
   background-repeat: no-repeat;
   background-size: cover;
 }
 .Typer{
-    padding-left: 30%;
+    padding-left: 29%;
     font-size: 500%;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
@@ -43,9 +44,10 @@ a.links{
 .slider {
   margin-left: 11%;
   border: 2px white solid;
+  margin-top: 7%;
   border-radius: 40px;
   position: relative;
-  width: 800px;
+  max-width: 620px;
   height: 500px;
   overflow: hidden;
   white-space: nowrap;
@@ -146,6 +148,8 @@ a.links{
   display: table;
 }
 .icons{
+  margin-left: 5%;
+    margin-top: 8%;
     font-weight: bold;
     font-size: 120%;
     color: white;
@@ -337,4 +341,12 @@ fieldset[disabled] .btn-custom.active {
 .nicole:hover{
 transform: scale(1.3);
 color: #E14658;
+}
+
+.interests{
+  margin-bottom: -5%;
+  margin-top: 5%;
+  color: white;
+  font-size: 200%;
+  font-weight: bold;
 }
