--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -21,6 +21,7 @@ html, body {
     padding-bottom: 1%;
 }
 
+
 .down{
   margin-top: 7%;
 }
@@ -211,7 +212,12 @@ border: 1px black solid;
 }
 .title{
   font-size: 200%;
+  text-align: center;
   font-weight: bold;
+}
+.center1{
+  text-align: center;
+  padding-bottom: 2%;
 }
 .buttonColor{
 background-color: #bfbfbf;
@@ -271,12 +277,13 @@ padding-right: 5%;
 background-color: #E14658;
 }
 .blackboard{
+
   padding:8.3%;
   color: white;
   background-color:#22252C;
 }
 .blackboard1{
-  padding-top: 5%;
+  padding-top: 4%;
   padding-bottom: 2%;
   background-color: #22252C;
 }
@@ -296,13 +303,14 @@ font-family: 'Roboto', sans-serif;
 color: white;
 font-size: 130%;
 }
-.paragraph1{
-margin-left: 5%;
-margin-right: 5%;
-margin-bottom: 2%;
+
+.paragraph2{
+padding-top: 2%;
+padding-bottom: 2%;
 font-family: 'Roboto', sans-serif;
 color: white;
 font-size: 130%;
+text-align: center;
 }
 .btn-custom {
   background-color: #E14658;
