--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -13,28 +13,48 @@ html, body {
   background-repeat: no-repeat;
   background-size: cover;
 }
-.Typer{
-    padding-left: 29%;
-    font-size: 500%;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
-    padding-bottom: 1%;
-}
+.homeIntro{
+  margin-top: 10%;
+  margin-left: 5%;
+  font-size: 400%;
+  margin-right: 45%;
+  text-align: left;
+  margin-bottom: 4%;
+  font-family:  'Roboto', sans-serif;
+  font-weight: bold;
+  color: white;
+  background: #22252C;
+  padding: 10px;
+  border-radius: 20px;
 
+
+}
+.Typer{
+    margin-left:10%;
+    font-size: 300%;
+    font-family: 'Roboto', sans-serif;
+    margin-bottom: 3%;
+    color: white;
+    background: #22252C;
+    margin-right:45%;
+    padding: 10px;
+    border-radius: 20px;
+  }
 
 .down{
   margin-top: 7%;
+
 }
 
 div.links{
-  padding-left: 41%;
+  padding-left: 5%;
   margin-bottom: 2%;
 }
 
 a.links{
-  padding-right: 7%;
+  padding-right: 5%;
   text-decoration: none;
-  color: #000000;
+  color: white;
 }
 
 .boxshadow{
@@ -176,7 +196,7 @@ transition: .7s;
 
 .fontawesome:hover{
   transform: scale(1.5);
-  color:#E14658;
+  color:white;
 }
 .bottomlinks{
   margin-right: 1%;
@@ -357,4 +377,73 @@ color: #E14658;
   color: white;
   font-size: 200%;
   font-weight: bold;
+}
+
+.button1{
+  margin-bottom: 5%;
+  margin-left: 5%;
+  background:#E14658;
+  color:#fff;
+  border:none;
+  position:relative;
+  height:60px;
+  font-size:1.6em;
+  padding:0 2em;
+  cursor:pointer;
+  transition:800ms ease all;
+  outline:none;
+  text-decoration: none;
+}
+.button1:hover{
+  background:#fff;
+  color:black;
+  text-decoration: none;
+}
+.button1:before,button:after{
+  content:'';
+  position:absolute;
+  top:0;
+  right:0;
+  height:2px;
+  width:0;
+  background: black;
+  transition:400ms ease all;
+  text-decoration: none;
+}
+.button1:after{
+  right:inherit;
+  top:inherit;
+  left:0;
+  bottom:0;
+  text-decoration: none;
+}
+.button1:hover:before,button:hover:after{
+  width:100%;
+  transition:800ms ease all;
+  text-decoration: none;
+}
+
+.welcomeheader{
+  position: absolute;
+  top:180px;
+  left: 900px;
+}
+
+.anchor{
+  color: white;
+  text-decoration: none;
+}
+.anchor:visited{
+  text-decoration: none;
+  color: white;
+
+}
+.anchor:hover{
+  text-decoration: none;
+  color: black;
+}
+.anchor:active{
+  text-decoration: none;
+  color: white;
+
 }
