--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -38,3 +38,26 @@ a.normal:hover{
   text-decoration: none;
   color: #E14658;
 }
+
+
+.linkspan {
+  position: relative;
+}
+
+.linkspan::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 2px;
+  background-color: white;
+  transform-origin: bottom right;
+  transform: scaleX(0);
+  transition: transform 0.5s ease;
+}
+
+.linkspan:hover::before {
+  transform-origin: bottom left;
+  transform: scaleX(1);
+}
