--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -26,17 +26,10 @@
   transition: 1s;
 }
 .boxabout{
-  background-image: url("https://images.unsplash.com/photo-1555284023-249222086985?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&");
-background-repeat: no-repeat;
-background-attachment: fixed;
-background-position: center;
-background-size: cover;
-  margin-top: 7%;
-  margin-left: 1.5%;
-  margin-right: 1.5%;
-  padding-top: 5%;
-  padding-bottom: 8.5%;
-  background-color: white;
+  position: relative;
+
+  padding-top:18%;
+  padding-bottom:10%;
   box-shadow: 0 15px 30px 0 rgba(0,0,0,0.11),
             0 5px 15px 0 rgba(0,0,0,0.08);
 }
