--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -1,8 +1,12 @@
-.particles {
-    position: absolute;
-    right: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: -1;
-  }
+.parent {
+  display: flex;
+  height: 600px;
+  background-color: #222;
+}
+
+.child {
+  background-color: red;
+  width: 100px;
+  height: 100px;
+  margin: auto;
+}
