--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -27,9 +27,9 @@
 }
 .boxabout{
   position: relative;
+  margin: 1.5%;
 
-  padding-top:18%;
-  padding-bottom:10%;
+
   box-shadow: 0 15px 30px 0 rgba(0,0,0,0.11),
             0 5px 15px 0 rgba(0,0,0,0.08);
 }
@@ -79,3 +79,4 @@
     transition: transform 300ms; }
   .Collapsible__trigger.is-open:after {
     transform: rotateZ(180deg);}
+
