--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -41,8 +41,7 @@ html, body {
 }
 
 div.links{
-  margin-left:38%;
-  padding-left: 5%;
+text-align: center;
   margin-bottom: 3%;
 }
 
@@ -329,8 +328,8 @@ color: #E14658;
 }
 
 .button1{
-  margin-bottom: 15%;
-  margin-left: 47%;
+  margin-bottom: 13%;
+  margin-top: 2%;
   background:#E14658;
   color:#fff;
   border:none;
