--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -44,7 +44,10 @@ background-size: cover;
   margin-bottom:2%;
 }
 .subLinks{
-  font-size: 500%;
+  padding-top: 5%;
+  margin-bottom: 2%;
+text-align: center;
+  font-size: 600%;
   font-weight: bold;
 }
 
