--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,40 +1,25 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
-.titleabout{
-  color: black;
-  padding-left: 2%;
-  padding-right: 2%;
-  margin-left: 5%;
-  margin-right: 60%;
-  font-size: 700%;
-  background-color: white;
-  font-weight: bold;
-  padding-bottom: 10px;
-  border: 2px rgb(19, 10, 10) solid;
-    text-align: center;
-}
 .aboutlinks{
   color: #E14658;
-  padding-left: 2%;
-  padding-right: 2%;
-  margin-left: 5%;
-  margin-right: 60%;
+  
   background-color: white;
   font-family: 'Roboto', sans-serif;
   font-weight: bold;
-  padding-top: 8px;
-  padding-bottom: 8px;
+  padding: 1%;
   border: 2px black solid;
   transition: 1s;
   text-align: center;
 }
-
+.hrstyleblack{
+  border-top: 3px double black;
+}
 .boxabout{
   position: relative;
-  margin-left: 1%;
-  margin-right: 1%;
+  margin-left: 10%;
+  margin-right: 10%;
 
-  padding-top: 18%;
+  padding-top: 5%;
   padding-bottom: 10%;
   box-shadow: 0 15px 30px 0 rgba(0,0,0,0.11),
             0 5px 15px 0 rgba(0,0,0,0.08);
