--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -42,11 +42,12 @@ background-size: cover;
 }
 .javaBox{
   margin-bottom:2%;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 .subLinks{
-  padding-top: 5%;
-  margin-bottom: 2%;
-text-align: center;
+  margin-left:2%;
+  text-align: left;
   font-size: 600%;
   font-weight: bold;
 }
