--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -47,6 +47,7 @@ background-size: cover;
 }
 .subLinks{
   margin-left:2%;
+  padding-bottom:1%;
   text-align: left;
   font-size: 600%;
   font-weight: bold;
