--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -2,11 +2,14 @@
 
 .aboutlinks{
   color: #E14658;
-  
+  font-size: 200%;
   background-color: white;
   font-family: 'Roboto', sans-serif;
   font-weight: bold;
-  padding: 1%;
+  padding-top:5%;
+  padding-bottom:5%;
+  padding-left:2%;
+  padding-right: 2%;
   border: 2px black solid;
   transition: 1s;
   text-align: center;
@@ -14,17 +17,24 @@
 .hrstyleblack{
   border-top: 3px double black;
 }
+
 .boxabout{
   position: relative;
-  margin-left: 14%;
-  margin-right: 14%;
-
-  padding-top: 5%;
-  padding-bottom: 10%;
+  margin-left: 15%;
+  margin-right: 15%;
+  margin-top:8%;
+  padding-top:1%;
+  padding-bottom: 2%;
   box-shadow: 0 15px 30px 0 rgba(0,0,0,0.11),
             0 5px 15px 0 rgba(0,0,0,0.08);
 }
-
+.subabouthead{
+  font-size: 300%;
+  font-weight: bold;
+  margin-left: 2%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
 .text{
     font-size: 130%;
     margin-left: 25%;
@@ -105,7 +115,10 @@
 text-align: center;
 margin-left:2%;
     }
-
+.tabletools{
+  margin-left:4%;
+  font-size: 120%;
+}
     .spacer1{
       padding-bottom: .5%;
     }
@@ -142,10 +155,16 @@ margin-left:2%;
 
 
     .aboutme{
-      font-size: 150%;
+      font-size: 130%;
       color: black;
       margin-left: 4%;
       margin-right: 4%;
       margin-top: 2%;
       margin-bottom: 4%;
+    }
+
+    .imageBox{
+      border: 2px black solid;
+      height: 200px;
+      text-align: center;
     }
