--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -25,21 +25,7 @@
   border: 2px black solid;
   transition: 1s;
 }
-.box{
-  background-image: url("https://images.unsplash.com/photo-1554558424-4a02a6451c4b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&");
-background-repeat: no-repeat;
-background-attachment: fixed;
-background-position: center;
-background-size: cover;
-  margin-top: 7%;
-  margin-left: 1.5%;
-  margin-right: 1.5%;
-  padding-top: 5%;
-  padding-bottom: 4.5%;
-  background-color: white;
-  box-shadow: 0 15px 30px 0 rgba(0,0,0,0.11),
-            0 5px 15px 0 rgba(0,0,0,0.08);
-}
+
 .javaBox{
   margin-bottom:2%;
   margin-left: 14%;
@@ -52,42 +38,22 @@ background-size: cover;
   font-size: 600%;
   font-weight: bold;
 }
-
-
-.text1{
-  font-size: 130%;
-  margin-left: 25%;
-  margin-right: 25%;
-  margin-top: 3%;
-  text-align: center;
+.projectShowcase{
+  border: 1px black solid;
+  border-radius: 40px;
+  margin-left: 5%;
+  margin-right: 5%;
 }
-
-.projectColumn{
-  float: left;
-  width: 33.33%;
-  padding-left: 2.5%;
-  padding-right: 2.5%;
+.projectImage{
+  border-radius: 40px;
+  position: relative;
+  right: 15px;
+  height:300px;
 }
-
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-.projectgif{
-  border: solid black 1px;
-  border-radius: 5px;
-  height: auto;
-  width: auto;
-  max-width: 100%;
-}
-.anchor1{
-  color: black;
-  text-decoration: none;
-}
-.anchor1:hover{
-  text-decoration: none;
-  color: black;
-
+.projectText{
+  position: relative;
+  left:140%;
+  top: -300px;
+  height: 100px;
+  background-color: black;
 }
