--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -39,21 +39,35 @@
   font-weight: bold;
 }
 .projectShowcase{
-  border: 1px black solid;
-  border-radius: 40px;
-  margin-left: 5%;
-  margin-right: 5%;
+  border: 1px solid #ccc;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-bottom: 3%;
+  margin-top: 2%;
+  transition:  2s;
+
+}
+.projectShowcase:hover{
+  transition:  2s ;
+  transform: scale(1.1);
+  box-shadow: 0 0 11px rgba(33,33,33,.2); 
+
 }
 .projectImage{
-  border-radius: 40px;
   position: relative;
-  right: 15px;
-  height:300px;
+  right:6%;
+  height:210px;
 }
 .projectText{
-  position: relative;
-  left:140%;
-  top: -300px;
-  height: 100px;
-  background-color: black;
+  text-align: left;
+  padding-left: 6%;
+}
+.projectTitle{
+  margin-top: 2%;
+   font-size: 160%;
+  font-weight: bold;
+}
+.projectPara{
+  padding-bottom: 1%;
+
 }
