--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 div.nav{
-    width: 100%;
+  width: 100%;
     position: fixed;
     z-index: 9999;
     top: 0;
@@ -15,6 +15,12 @@ div.nav{
     max-width: 100%;
     min-width: 1500px; 
 
+}
+.modalshift{
+padding-top: 10%;
+}
+.modalbody{
+  font-size: 120%;
 }
 button.link { background:none;border:none; 
   font-family: 'Roboto', sans-serif;
@@ -30,6 +36,10 @@ button.link { background:none;border:none;
   transition: .7s;
 
   }
+.heading{
+  font-size: 200%;
+  font-weight: bold;
+}
 a.normal{
   background:none;border:none; 
     text-decoration: none;
