--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -28,8 +28,8 @@
 
 .javaBox{
   margin-bottom:2%;
-  margin-left: 14%;
-  margin-right: 14%;
+  margin-left: 15%;
+  margin-right: 15%;
 }
 .subLinks{
   margin-left:2%;
@@ -56,7 +56,8 @@
 .projectImage{
   position: relative;
   right:6%;
-  height:210px;
+  max-height:300px;
+  max-width: 125%;
 }
 .projectText{
   text-align: left;
@@ -70,4 +71,13 @@
 .projectPara{
   padding-bottom: 1%;
 
+}
+
+.centerHeading{
+  text-align: center;
+  font-size: 300%;
+  font-weight: bold;
+  margin-left: 2%;
+  padding-top: 2%;
+  padding-bottom: 2%;
 }
