--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -43,10 +43,13 @@ html, body {
 div.links{
 text-align: center;
   margin-bottom: 3%;
+  padding-bottom: 2%;
+
 }
 
 a.links{
-  padding-right: 5%;
+  padding-right: 4%;
+  padding-bottom: 2%;
   text-decoration: none;
   color: black;
 }
